kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: hello-world.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web
                port:
                  number: 8080
          - path: /backend/java
            pathType: Prefix
            backend:
              service:
                name: web-backend-java
                port:
                  number: 8080
          - path: /backend/golang
            pathType: Prefix
            backend:
              service:
                name: web-backend-golang
                port:
                  number: 8080
